--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-pytest==7.4.0
 selene==2.0.0rc3post2
+webdriver-manager==3.8.6
+selenium==4.10.0
+pytest==7.4.0
 allure-pytest==2.13.2
+pydantic==1.10.7
+jsonschema==4.18.4
+curlify==2.2.1
+python-dotenv==0.21.0
 requests
 colorama==0.4.6
 pypdf2~=2.11.2
 openpyxl~=3.0.1
-python-dotenv==0.20.0
