--- a/notifications/telegram-config.json
+++ b/notifications/telegram-config.json
@@ -1,6 +1,6 @@
 {
   "base": {
-    "project": "some project: Arivistika tests (Python)",
+    "project": "some project: BERLIN ARCHIVE tests (Python)",
     "environment": "some env: / PROD",
     "comment": "some comment / local",
     "reportLink": "",
